--- a/CURSO 2526/T12/web-api/index.html
+++ b/CURSO 2526/T12/web-api/index.html
@@ -39,6 +39,8 @@
 
       <button class="btn btn-primary" id="btnAgregar">Agregar</button>
       <div id="divResultado"></div>
+
+      <ul class="list-group" id="listaProductos"></ul>
     </main>
     <script src="./utils/js/index.js"></script>
   </body>
